Lint from several test subdirectories (#3160)